--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 bitpacking = { version = "0.9.2", default-features = false, features = ["bitpacker4x"] }
 ownedbytes = "0.7.0"
-rice_coder = { version = "0.1.0", path = "../rice_coder" }
+rice_coder = { version = "0.1.0", git = "https://github.com/PSeitz/rice_coder" }
 roaring = "0.10.6"
 tantivy-common = "0.7.0"
 
